--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   overflow: hidden;
-  margin: 0;
+  margin: 0; */
 }
