--- a/style.css
+++ b/style.css
@@ -2,18 +2,23 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 body {
   font-family: "Roboto", sans-serif;
+  /* color: #5f5f5f; */
 }
 
 /* Nav Bar */
 .navigation {
   display: flex;
   justify-content: space-between;
-  padding: 33px 0;
+  padding: 33px 26px;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .snow-logo {
@@ -31,4 +36,77 @@ body {
   list-style-type: none;
   margin: 15px;
   cursor: pointer;
+  color: #ddd;
+}
+
+/* Home */
+#home {
+  /* height: calc(100vh - 113px); */
+  height: 100vh;
+  position: relative;
+}
+
+.home-bg-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url("images/home-7.jpg");
+  background-position: 50% 50%;
+  background-size: cover;
+  z-index: -1;
+}
+
+.home-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.55);
+}
+
+.home-container .home-titles {
+  text-align: center;
+  margin-bottom: 120px;
+  color: #fff;
+}
+
+.home-container .home-titles h3 {
+  font-size: 13px;
+  letter-spacing: 2px;
+}
+.home-container .home-titles h1 {
+  font-size: 50px;
+  margin-top: 20px;
+}
+.home-container .home-titles h2 {
+  font-size: 45px;
+}
+
+.home-container .down-btn {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  font-size: 17px;
+  font-weight: lighter;
+  color: #ddd;
+  background-color: transparent;
+  cursor: pointer;
+  position: absolute;
+  bottom: 65px;
+  transition: 0.3s ease;
+}
+
+.home-container .down-btn i {
+  transform: translateY(10%);
+}
+
+.home-container .down-btn:hover {
+  border: 1px solid #fff;
+  color: #fff;
 }
