--- a/style.css
+++ b/style.css
@@ -183,3 +183,106 @@ body {
   line-height: 1.65;
   letter-spacing: 0.004rem;
 }
+
+/* Project */
+#project {
+}
+
+.project-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-container .project-title {
+  margin-top: 80px;
+  font-size: 40px;
+}
+
+.project-container .project-description {
+  margin: 30px 0 40px 0;
+  width: 60%;
+  text-align: center;
+  word-break: keep-all;
+  letter-spacing: 0.004rem;
+  word-spacing: 5px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.65;
+  color: #666;
+}
+
+.project-lists {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 95px;
+}
+
+.project-lists .list {
+  width: 310px;
+  height: 310px;
+}
+
+.project-testimonial {
+  height: 700px;
+}
+
+.project-testimonial .testimonial-feedback {
+  background-color: #111;
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.project-testimonial .testimonial-feedback .feedback-wrap {
+  margin-top: 160px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.project-testimonial
+  .testimonial-feedback
+  .feedback-wrap
+  .feedback-description {
+  font-size: 1.685rem;
+  line-height: 1.45;
+  margin-bottom: 1.15rem;
+  text-align: center;
+}
+
+.project-testimonial .testimonial-feedback .feedback-wrap .feedback-talker {
+  font-size: 0.96rem;
+  text-align: center;
+}
+.project-testimonial .testimonial-feedback .button-container {
+  margin-bottom: 50px;
+}
+
+.button-container .count-btn {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+}
+
+.project-testimonial .testimonial-examples {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.project-testimonial .testimonial-examples .example {
+  width: 192px;
+  height: 128px;
+}
