--- a/style.css
+++ b/style.css
@@ -269,9 +269,11 @@ body {
 
 .button-container .count-btn {
   border-radius: 50%;
-  width: 10px;
-  height: 10px;
+  width: 11px;
+  height: 11px;
+  border: none;
   cursor: pointer;
+  margin: 1px;
 }
 
 .project-testimonial .testimonial-examples {
@@ -285,4 +287,84 @@ body {
 .project-testimonial .testimonial-examples .example {
   width: 192px;
   height: 128px;
+}
+
+/* BLog */
+#blog {
+  width: 100%;
+  height: auto;
+}
+
+.blog-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog-container .blog-title {
+  margin-top: 80px;
+  font-size: 40px;
+}
+
+.blog-container .blog-description {
+  margin-top: 30px;
+  width: 60%;
+  text-align: center;
+  word-break: keep-all;
+  letter-spacing: 0.004rem;
+  word-spacing: 5px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.65;
+  color: #666;
+}
+
+.blog-container .blog-card-container {
+  margin: 50px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog-container .blog-card-container .blog-card {
+  width: 280px;
+  height: 410px;
+  padding: 0 15px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.03);
+}
+
+.blog-card-container .blog-card .card-image {
+  width: 100%;
+  height: 40%;
+}
+
+.blog-card-container .blog-card .card-info {
+  width: 100%;
+  height: 60%;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.card-info .card-title {
+  font-size: 1.45rem;
+}
+
+.card-info .card-date {
+  font-size: 0.84rem;
+}
+
+.card-info .card-description {
+  letter-spacing: 0.004rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.65;
+}
+
+.blog-container .button-container {
+  margin-bottom: 100px;
 }
