--- a/style.css
+++ b/style.css
@@ -13,12 +13,18 @@ body {
 /* Nav Bar */
 .navigation {
   display: flex;
+  justify-content: center;
+}
+
+.navigation .nav-wrap {
+  display: flex;
   justify-content: space-between;
   padding: 33px 26px;
   align-items: center;
   position: fixed;
   width: 100%;
   z-index: 1;
+  max-width: 1200px;
 }
 
 .snow-logo {
@@ -119,6 +125,10 @@ body {
 /* About */
 #about {
   height: 76vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .about-agency-container {
@@ -129,6 +139,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1200px;
 }
 
 .about-agency-container .about-title {
@@ -186,6 +197,10 @@ body {
 
 /* Project */
 #project {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-container {
@@ -193,6 +208,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1200px;
 }
 
 .project-container .project-title {
@@ -226,6 +242,11 @@ body {
 
 .project-testimonial {
   height: 700px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-testimonial .testimonial-feedback {
@@ -247,6 +268,7 @@ body {
   justify-content: center;
   align-items: center;
   color: #fff;
+  max-width: 800px;
 }
 
 .project-testimonial
@@ -282,6 +304,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  max-width: 1200px;
 }
 
 .project-testimonial .testimonial-examples .example {
@@ -293,6 +316,10 @@ body {
 #blog {
   width: 100%;
   height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .blog-container {
@@ -301,6 +328,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 1200px;
 }
 
 .blog-container .blog-title {
@@ -447,6 +475,9 @@ body {
 .customer-info-form input.comment {
   height: 150px;
   padding: 0 22px 100px 22px;
+}
+.customer-info-form input:focus {
+  outline: none;
 }
 
 .contact-wrap .customer-info-form .send-btn {
