--- a/style.css
+++ b/style.css
@@ -233,11 +233,25 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 95px;
+  justify-content: center;
 }
 
 .project-lists .list {
   width: 310px;
   height: 310px;
+  cursor: pointer;
+  position: relative;
+}
+
+/* ????? 위로 어떻게 덮지 js로 해야하나 */
+.project-lists .list:hover:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
 }
 
 .project-testimonial {
@@ -250,7 +264,7 @@ body {
 }
 
 .project-testimonial .testimonial-feedback {
-  background-color: #111;
+  background: url("images/bg-pattern.jpg");
   width: 100%;
   height: 70%;
   display: flex;
@@ -269,6 +283,7 @@ body {
   align-items: center;
   color: #fff;
   max-width: 800px;
+  cursor: pointer;
 }
 
 .project-testimonial
@@ -305,6 +320,7 @@ body {
   justify-content: space-around;
   align-items: center;
   max-width: 1200px;
+  cursor: pointer;
 }
 
 .project-testimonial .testimonial-examples .example {
@@ -362,11 +378,16 @@ body {
   height: 410px;
   padding: 0 15px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.03);
+  cursor: pointer;
 }
 
 .blog-card-container .blog-card .card-image {
   width: 100%;
   height: 40%;
+  transition: 0.3s ease;
+}
+.blog-card-container .blog-card .card-image:hover {
+  opacity: 0.7;
 }
 
 .blog-card-container .blog-card .card-info {
